[package]
name = "ct_ratio"
version = "1.2.0"
edition = "2021"
license-file = "LICENSE"
description = "Compile-time rational arithmetic for use in generics"
repository = "https://github.com/ChrysoliteAzalea/ct_ratio"
readme = "README.md"

[dependencies]

[[test]]
name = "check_op"
path = "test/op.rs"

[[test]]
name = "check_cmp"
path = "test/cmp.rs"

[[test]]
name = "check_reduction"
path = "test/reduction.rs"